--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -16,6 +16,7 @@
 \usepackage{xifthen}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage{authblk}
 
 % notation for standard math
 \renewcommand{\d}{\partial}
@@ -95,7 +96,11 @@
 \title{Critical assessment of Linear-Response Excitations in Molecular system\\
 or \\
 On the Localization of the Linear-Response excitations in Open Systems}
-\author{You}
+\author[1]{Luigi Genovese}
+\author[2]{Marco D'Alessandro}
+\affil[1]{Laboratoire de Simulation Atomistique (LSim), SP2M, INAC, CEA-UJF, 17 Av. des Martyrs,
+38054 Grenoble, France}
+\affil[2]{Istituto di Struttura della Materia-CNR (ISM-CNR), Via del Fosso del Cavaliere 100, 00133 Roma, Italia}
 
 \begin{document}
 \maketitle
